--- a/main.html
+++ b/main.html
@@ -6,71 +6,76 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
+<body>
+    <div data-ns-test="block-inline-button">
+     
+
+
 <body class="container">
 	<!-- the entire body must be written by student -->
 	<!-- button -->
-	<div >
-	     <button class=data-ns-attribute="block-iniline-button">sumbit</button>
-	    <button class=data-ns-attribute="block-iniline-button">sumbit</button>Answer: Inline</div>
+<div>data-ns-test="block-iniline-button">
+	     <button>sumbit</button>
+	    <button>sumbit</button>Answer: Inline</div>
     </div>
 	<!-- div -->
-	<div>
-	     <div class=data-ns-attribute="block-iniline-div">Div</div>
-	     <div class=data-ns-attribute="block-iniline-div">Div</div>
+	<div data-ns-test="block-iniline-div">
+	     <div>Div</div>
+	     <div>Div</div>
 		 Answer: Block
     </div>
 	<!-- span -->
-	<div>
-		<span class=data-ns-attribute="block-iniline-span">Span</span>
-		<span class=data-ns-attribute="block-iniline-span">Span</span>
+	<div data-ns-test="block-iniline-span">
+		<span >Span</span>
+		<span >Span</span>
 		Answer: Inline
 	</div>
 	<!-- paragraph -->
-	<div>
-		<p  class=data-ns-attribute="block-iniline-p">p</p>
-		<p class=data-ns-attribute="block-iniline-p">p</p>
+	<div data-ns-test="block-iniline-p">
+		<p>p</p>
+		<p>p</p>
 		Answer: Block
 	</div>
 	<!-- input -->
-	<div>
-		<input type="text" class=data-ns-attribute="block-iniline-input"">hi
-		<input type="text" class=data-ns-attribute="block-iniline-input">hi
+	<div  type="text" data-ns-test="block-iniline-input">
+		<input>hi
+		<input>hi
 		Answer: Inline
 	</div>
 	<!-- cite -->
-	<div>
-		<cite class=data-ns-attribute="block-iniline-cite">cite</cite>
-		<cite class=data-ns-attribute="block-iniline-cite">cite</cite>
+	<div data-ns-test="block-iniline-cite">
+		<cite>cite</cite>
+		<cite>cite</cite>
 		Answer: Inline
 	</div>
 	<!-- code -->
-	<div>
-		<code class=data-ns-attribute="block-iniline-code">code</code>
-		<code class=data-ns-attribute="block-iniline-code">code</code>
+	<div data-ns-test="block-iniline-code">
+		<code>code</code>
+		<code>code</code>
 		Answer: Inline
 	</div>
 	<!-- p -->
-	<div>
-		<p class=data-ns-attribute="block-iniline-p">p1</p>
-		<p class=data-ns-attribute="block-iniline-p">p2</p>
+	<div data-ns-test="block-iniline-p">
+		<p >p1</p>
+		<p >p2</p>
 		Answer: Block
 	</div>
 	<!-- h1 -->
-	<div>
-		<h1 class=data-ns-attribute="block-iniline-h1">hi</h1>
-        <h1 class=data-ns-attribute="block-iniline-h1">hi</h1>
+	<div data-ns-test="block-iniline-h1">
+		<h1 >hi</h1>
+        <h1 >hi</h1>
 		Answer: Block
 	</div>
 	<!-- sup -->
-	<div>
-		<sup class=data-ns-attribute="block-iniline-sup">hello user</sup>
-		<sup class=data-ns-attribute="block-iniline-sup">hello user</sup>
+	<div data-ns-test="block-iniline-sup">
+		<sup >hello user</sup>
+		<sup >hello user</sup>
 		Answer: Inline
 	</div>
 	<!-- sub -->
-	<div>
-		<sub class=data-ns-attribute="block-iniline-sub">hello user</sub>
-		<sub class=data-ns-attribute="block-iniline-sub">hell user</sub>
+	<div data-ns-test="block-iniline-sub">
+		<sub >hello user</sub>
+		<sub >hell user</sub>
 		Answer: Inline
 	</div>
 	
