--- a/main.html
+++ b/main.html
@@ -5,77 +5,72 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
-<body>
-    <div data-ns-test="block-inline-button">
-     
-
-
 <body class="container">
 	<!-- the entire body must be written by student -->
 	<!-- button -->
-<div>data-ns-test="block-iniline-button">
+<div data-ns-test="block-inline-button">
 	     <button>sumbit</button>
-	    <button>sumbit</button>Answer: Inline</div>
+	    <button>sumbit</button>
+		Answer: Inline
     </div>
 	<!-- div -->
-	<div data-ns-test="block-iniline-div">
+	<div data-ns-test="block-inline-div">
 	     <div>Div</div>
 	     <div>Div</div>
 		 Answer: Block
     </div>
 	<!-- span -->
-	<div data-ns-test="block-iniline-span">
+	<div data-ns-test="block-inline-span">
 		<span >Span</span>
 		<span >Span</span>
 		Answer: Inline
 	</div>
 	<!-- paragraph -->
-	<div data-ns-test="block-iniline-p">
+	<div data-ns-test="block-inline-p">
 		<p>p</p>
 		<p>p</p>
 		Answer: Block
 	</div>
 	<!-- input -->
-	<div  type="text" data-ns-test="block-iniline-input">
+	<div data-ns-test="block-inline-input">
 		<input>hi
 		<input>hi
 		Answer: Inline
 	</div>
 	<!-- cite -->
-	<div data-ns-test="block-iniline-cite">
+	<div data-ns-test="block-inline-cite">
 		<cite>cite</cite>
 		<cite>cite</cite>
 		Answer: Inline
 	</div>
 	<!-- code -->
-	<div data-ns-test="block-iniline-code">
+	<div data-ns-test="block-inline-code">
 		<code>code</code>
 		<code>code</code>
 		Answer: Inline
 	</div>
 	<!-- p -->
-	<div data-ns-test="block-iniline-p">
+	<div data-ns-test="block-inline-p">
 		<p >p1</p>
 		<p >p2</p>
 		Answer: Block
 	</div>
 	<!-- h1 -->
-	<div data-ns-test="block-iniline-h1">
+	<div data-ns-test="block-inline-h1">
 		<h1 >hi</h1>
         <h1 >hi</h1>
 		Answer: Block
 	</div>
 	<!-- sup -->
-	<div data-ns-test="block-iniline-sup">
+	<div data-ns-test="block-inline-sup">
 		<sup >hello user</sup>
 		<sup >hello user</sup>
 		Answer: Inline
 	</div>
 	<!-- sub -->
-	<div data-ns-test="block-iniline-sub">
-		<sub >hello user</sub>
-		<sub >hell user</sub>
+	<div data-ns-test="block-inline-sub">
+		<sub>hello user</sub>
+		<sub>hell user</sub>
 		Answer: Inline
 	</div>
 	
