--- a/main.html
+++ b/main.html
@@ -9,68 +9,68 @@
 	<!-- the entire body must be written by student -->
 	<!-- button -->
 <div data-ns-test="block-inline-button">
-	     <button>sumbit</button>
-	    <button>sumbit</button>
+	     <button>Test1</button>
+	    <button>Test2</button>
 		Answer: Inline
     </div>
 	<!-- div -->
 	<div data-ns-test="block-inline-div">
-	     <div>Div</div>
-	     <div>Div</div>
+	     <div>Test1</div>
+	     <div>Test2</div>
 		 Answer: Block
     </div>
 	<!-- span -->
 	<div data-ns-test="block-inline-span">
-		<span >Span</span>
-		<span >Span</span>
+		<span >Test1</span>
+		<span >Test2</span>
 		Answer: Inline
 	</div>
 	<!-- paragraph -->
 	<div data-ns-test="block-inline-p">
-		<p>p</p>
-		<p>p</p>
+		<p>Test1</p>
+		<p>Test2</p>
 		Answer: Block
 	</div>
 	<!-- input -->
 	<div data-ns-test="block-inline-input">
-		<input>hi
-		<input>hi
+		<input>Test1</input>
+		<input>Test2</input>
 		Answer: Inline
 	</div>
 	<!-- cite -->
 	<div data-ns-test="block-inline-cite">
-		<cite>cite</cite>
-		<cite>cite</cite>
+		<cite>Test1</cite>
+		<cite>Test2</cite>
 		Answer: Inline
 	</div>
 	<!-- code -->
 	<div data-ns-test="block-inline-code">
-		<code>code</code>
-		<code>code</code>
+		<code>Test1</code>
+		<code>Test2</code>
 		Answer: Inline
 	</div>
 	<!-- p -->
 	<div data-ns-test="block-inline-p">
-		<p >p1</p>
-		<p >p2</p>
+		<p >Test1</p>
+		<p >Test2</p>
 		Answer: Block
 	</div>
 	<!-- h1 -->
 	<div data-ns-test="block-inline-h1">
-		<h1 >hi</h1>
-        <h1 >hi</h1>
+		<h1 >Test1</h1>
+        <h1 >Test2</h1>
 		Answer: Block
 	</div>
 	<!-- sup -->
 	<div data-ns-test="block-inline-sup">
-		<sup >hello user</sup>
-		<sup >hello user</sup>
+		<sup >Test1</sup>
+		<sup >Test2</sup>
 		Answer: Inline
 	</div>
 	<!-- sub -->
 	<div data-ns-test="block-inline-sub">
-		<sub>hello user</sub>
-		<sub>hell user</sub>
+		<sub>Test1</sub>
+		<sub>Test2</sub>
 		Answer: Inline
 	</div>
 	
