--- a/main.html
+++ b/main.html
@@ -25,12 +25,12 @@
 		<span >Test2</span>
 		Answer: Inline
 	</div>
-	<!-- paragraph -->
+	<!-- paragraph
 	<div data-ns-test="block-inline-p">
 		<p>Test1</p>
 		<p>Test2</p>
 		Answer: Block
-	</div>
+	</div> -->
 	<!-- input -->
 	<div data-ns-test="block-inline-input">
 		<input>Test1</input>
